--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # ----------------------- #
 
 url: http://healthackconf.github.io
-title: Health Hack Conference 2016
+title: Health Hack Conference @ MYJ
 email: kakeda@zensow.jp
 author: ヘルスハックカンファレンス実行委員
 description: > # "Write an awesome description for your new site here. 
