Add facebook url.

--- a/_config.yml
+++ b/_config.yml
@@ -26,3 +26,6 @@ social:
   - title: Twitter
     icon: twitter
     url: https://twitter.com/healthhackconf
+  - title: Facebook
+    icon: facebook
+    url: http://www.facebook.com/1523632497936897
