--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # ----------------------- #
 
 url: http://healthackconf.github.io
-title: ヘルスハックカンファレンス
+title: Health Hack Conference
 email: contact+hhc@zensow.jp
 author: ヘルスハックカンファレンス実行委員
 description: > #プログラマーだけでなく、現代人は様々な技術革新・社会システムによる利便性の獲得と相反するように、運動不足やジャンクフードに囲まれ、生活習慣病に怯える人が増えています。よい仕事をするため、いきいきとした人生を送るためには、**自ら健康の重要性に目を向け、日常的に実践しなければならない時代なのです。**本カンファレンスは、自分の力で心身ともに健康な人生を送るために健康をハック(工夫し改善する)する**ヘルスハッカー**に変わるためのカンファレンスです。
