--- a/_config.yml
+++ b/_config.yml
@@ -3,12 +3,11 @@
 # ----------------------- #
 
 url: http://healthackconf.github.io
-title: Health Hack Conference
+title: ヘルスハックカンファレンス
 email: contact+hhc@zensow.jp
 author: ヘルスハックカンファレンス実行委員
-description: > #プログラマーだけでなく、現代人は様々な技術革新・社会システムによる利便性の獲得と相反するように、運動不足やジャンクフードに囲まれ、生活習慣病に怯える人が増えています。よい仕事をするため、いきいきとした人生を送るためには、**自ら健康の重要性に目を向け、日常的に実践しなければならない時代なのです。**本カンファレンスは、自分の力で心身ともに健康な人生を送るために健康をハック(工夫し改善する)する**ヘルスハッカー**に変わるためのカンファレンスです。
-copyright: 'Copyright &copy; 2016 ヘルシーハックカンファレンス実行委員会. All Rights Reserved.'
-credits: 'Credits: Landing Page is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com/">Start Bootstrap</a>.'
+description: よい仕事をするため、いきいきとした人生を送るためには、自ら健康の重要性に目を向け、専門家に依存するのではなく、自らが日常的に実践しなければならない時代です。本カンファレンスは、ヘルスハックの実践を共有し、身体を動かし、美味しい食事を味わい、緑や潮風を感じる、全身で健康を楽しみながらヘルスハッカーに生まれ変わるためのイベントです。
+copyright: 'Copyright &copy; 2016 ヘルスハックカンファレンス実行委員会. All Rights Reserved.'
 
 # ----------------------- #
 #    Jekyll & Plugins     #
@@ -28,4 +27,4 @@ social:
     url: https://twitter.com/healthhackconf
   - title: Facebook
     icon: facebook
-    url: http://www.facebook.com/1523632497936897
+    url: http://www.facebook.com/healthhackconf
