--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://healthackconf.github.io
+url: http://healthhackconf.github.io
 title: ヘルスハックカンファレンス
 email: contact+hhc@zensow.jp
 author: ヘルスハックカンファレンス実行委員
