Add sns widget.

--- a/_config.yml
+++ b/_config.yml
@@ -28,3 +28,6 @@ social:
   - title: Facebook
     icon: facebook
     url: http://www.facebook.com/healthhackconf
+  - title: Instagram
+    icon: instagram
+    url: http://www.instagram.com/healthhackconf
